Init form and gather all required data

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,21 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+	"manifest_version": 2,
+	"name": "Prakerja Gratis Bookmarker",
+	"description": "Bookmarker tools to seed prakerjagratis.com",
+	"version": "1",
+	"author": "BukanStafsus",
+	"browser_action": {
+		"default_title": "Prakerja Gratis",
+		"default_popup": "index.html"
+	},
+	"permissions": [
+		"activeTab",
+		"tabs"
+	],
+	"icons": {
+		"16": "logo192.png",
+		"48": "logo192.png",
+		"128": "logo512.png"
+  },
+  "content_security_policy": "script-src 'self' 'sha256-M/5ldsBDkbFDZ++a048KPcfiM23RMqNfThQV1BRAZNk='; object-src 'self'"
 }
